Add landscape dashboard for model accuracy comparison
- Introduced a new visualization dashboard in landscape format (16:9) to compare model performance.
- The dashboard includes:
  - Field-level comparison with horizontal bar charts.
  - Radar chart for category-wise performance.
  - Boxplot and stripplot for distribution analysis.
  - Summary statistics table.
  - Improvement per field visualization.
  - Section for additional capabilities exclusive to the current model.
- Enhanced visual aesthetics with appropriate color schemes and layout adjustments.

--- a/notebooks_v2/model_accuracy_comparison.ipynb
+++ b/notebooks_v2/model_accuracy_comparison.ipynb
@@ -1744,6 +1744,224 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =============================================================================\n",
+    "# LANDSCAPE DASHBOARD - Slide presentation format (16:9)\n",
+    "# =============================================================================\n",
+    "# 16:9 aspect ratio: 13.3 x 7.5 inches\n",
+    "\n",
+    "fig = plt.figure(figsize=(13.3, 7.5), facecolor='white')\n",
+    "\n",
+    "# Create grid: 2 rows, 4 columns\n",
+    "gs = fig.add_gridspec(2, 4, height_ratios=[1.2, 1], width_ratios=[1.5, 0.8, 0.8, 1],\n",
+    "                      hspace=0.35, wspace=0.35, top=0.88, bottom=0.08, left=0.06, right=0.98)\n",
+    "\n",
+    "# Colors\n",
+    "colors_current = '#2ecc71'\n",
+    "colors_competing = '#3498db'\n",
+    "\n",
+    "# --- Title & Legend (top) ---\n",
+    "ax_title = fig.add_axes([0.02, 0.91, 0.96, 0.08])\n",
+    "ax_title.axis('off')\n",
+    "ax_title.text(0.5, 0.7, 'Model Position-Aware F1 Comparison', \n",
+    "              fontsize=20, fontweight='bold', ha='center', va='center')\n",
+    "ax_title.text(0.5, 0.15, \n",
+    "              f'{CURRENT_MODEL_NAME} vs {COMPETING_MODEL_NAME}  |  '\n",
+    "              f'{metrics[\"n_fields_compared\"]} comparable fields  |  '\n",
+    "              f'Mean improvement: {metrics[\"mean_difference\"]:+.1%}', \n",
+    "              fontsize=11, ha='center', va='center', color='#555')\n",
+    "\n",
+    "# Legend\n",
+    "from matplotlib.patches import Patch\n",
+    "legend_elements = [\n",
+    "    Patch(facecolor=colors_current, alpha=0.85, label=CURRENT_MODEL_NAME),\n",
+    "    Patch(facecolor=colors_competing, alpha=0.85, label=COMPETING_MODEL_NAME)\n",
+    "]\n",
+    "fig.legend(handles=legend_elements, loc='upper right', bbox_to_anchor=(0.98, 0.98),\n",
+    "           ncol=1, fontsize=10, frameon=True, fancybox=True)\n",
+    "\n",
+    "# --- Panel A: Field-level comparison (left, spans 2 rows) ---\n",
+    "ax1 = fig.add_subplot(gs[:, 0])\n",
+    "plot_sorted = plot_df.sort_values('current_accuracy', ascending=True)\n",
+    "y_pos = np.arange(len(plot_sorted))\n",
+    "\n",
+    "ax1.barh(y_pos + 0.2, plot_sorted['current_accuracy'], 0.4, \n",
+    "         label=CURRENT_MODEL_NAME, color=colors_current, alpha=0.85)\n",
+    "ax1.barh(y_pos - 0.2, plot_sorted['competing_accuracy'], 0.4,\n",
+    "         label=COMPETING_MODEL_NAME, color=colors_competing, alpha=0.85)\n",
+    "\n",
+    "ax1.set_yticks(y_pos)\n",
+    "ax1.set_yticklabels(plot_sorted['field'], fontsize=9)\n",
+    "ax1.set_xlabel('Position-Aware F1', fontsize=10)\n",
+    "ax1.set_xlim(0, 1)\n",
+    "ax1.set_title('A. Field-Level F1 (Comparable Fields)', fontsize=12, fontweight='bold', loc='left')\n",
+    "ax1.axvline(x=0.5, color='gray', linestyle=':', alpha=0.5)\n",
+    "sns.despine(ax=ax1)\n",
+    "\n",
+    "# Add percentage labels\n",
+    "for i, (_, row) in enumerate(plot_sorted.iterrows()):\n",
+    "    ax1.text(row['current_accuracy'] + 0.01, i + 0.2, f\"{row['current_accuracy']:.0%}\", \n",
+    "             va='center', ha='left', fontsize=7, color=colors_current)\n",
+    "    ax1.text(row['competing_accuracy'] + 0.01, i - 0.2, f\"{row['competing_accuracy']:.0%}\", \n",
+    "             va='center', ha='left', fontsize=7, color=colors_competing)\n",
+    "\n",
+    "# --- Panel B: Radar Chart (top middle) ---\n",
+    "ax2 = fig.add_subplot(gs[0, 1], polar=True)\n",
+    "\n",
+    "cat_data = []\n",
+    "for cat, fields in FIELD_CATEGORIES.items():\n",
+    "    cat_df_temp = comparison_df[comparison_df['field'].isin(fields)]\n",
+    "    if len(cat_df_temp) > 0:\n",
+    "        cat_data.append({\n",
+    "            'category': cat,\n",
+    "            'current': cat_df_temp['current_accuracy'].mean(),\n",
+    "            'competing': cat_df_temp['competing_accuracy'].mean()\n",
+    "        })\n",
+    "\n",
+    "radar_df = pd.DataFrame(cat_data)\n",
+    "categories_list = radar_df['category'].tolist()\n",
+    "N = len(categories_list)\n",
+    "\n",
+    "angles = [n / float(N) * 2 * np.pi for n in range(N)]\n",
+    "angles += angles[:1]\n",
+    "\n",
+    "values_current = radar_df['current'].tolist()\n",
+    "values_current += values_current[:1]\n",
+    "ax2.plot(angles, values_current, 'o-', linewidth=2, color=colors_current, markersize=4)\n",
+    "ax2.fill(angles, values_current, alpha=0.25, color=colors_current)\n",
+    "\n",
+    "values_competing = radar_df['competing'].tolist()\n",
+    "values_competing += values_competing[:1]\n",
+    "ax2.plot(angles, values_competing, 'o-', linewidth=2, color=colors_competing, markersize=4)\n",
+    "ax2.fill(angles, values_competing, alpha=0.25, color=colors_competing)\n",
+    "\n",
+    "ax2.set_xticks(angles[:-1])\n",
+    "ax2.set_xticklabels(categories_list, fontsize=8)\n",
+    "ax2.set_ylim(0, 1)\n",
+    "ax2.set_yticks([0.2, 0.4, 0.6, 0.8, 1.0])\n",
+    "ax2.set_yticklabels(['0.2', '', '0.6', '', '1.0'], fontsize=7)\n",
+    "ax2.set_title('B. By Category', fontsize=12, fontweight='bold', loc='left', pad=15)\n",
+    "\n",
+    "# --- Panel C: Distribution (top right-middle) ---\n",
+    "ax3 = fig.add_subplot(gs[0, 2])\n",
+    "box_df = pd.DataFrame({\n",
+    "    'Model': [CURRENT_MODEL_NAME] * len(plot_df) + [COMPETING_MODEL_NAME] * len(plot_df),\n",
+    "    'F1': list(plot_df['current_accuracy']) + list(plot_df['competing_accuracy'])\n",
+    "})\n",
+    "\n",
+    "sns.boxplot(data=box_df, x='Model', y='F1', ax=ax3, \n",
+    "            palette=[colors_current, colors_competing], width=0.5)\n",
+    "sns.stripplot(data=box_df, x='Model', y='F1', ax=ax3,\n",
+    "              color='black', alpha=0.4, size=4, jitter=0.1)\n",
+    "\n",
+    "ax3.set_ylim(0, 1)\n",
+    "ax3.set_xlabel('')\n",
+    "ax3.set_ylabel('Position-Aware F1', fontsize=10)\n",
+    "ax3.set_title('C. Distribution', fontsize=12, fontweight='bold', loc='left')\n",
+    "ax3.tick_params(axis='x', labelsize=9)\n",
+    "sns.despine(ax=ax3)\n",
+    "\n",
+    "# --- Panel D: Summary Statistics (top right) ---\n",
+    "ax4 = fig.add_subplot(gs[0, 3])\n",
+    "ax4.axis('off')\n",
+    "\n",
+    "current_short = CURRENT_MODEL_NAME.replace('InternVL', 'IVL').replace('-', '')\n",
+    "competing_short = COMPETING_MODEL_NAME\n",
+    "\n",
+    "metrics_data = [\n",
+    "    ['', current_short, competing_short],\n",
+    "    ['Mean F1', f\"{metrics['current_mean']:.1%}\", f\"{metrics['competing_mean']:.1%}\"],\n",
+    "    ['Median', f\"{metrics['current_median']:.1%}\", f\"{metrics['competing_median']:.1%}\"],\n",
+    "    ['Critical', f\"{metrics['critical_current_mean']:.1%}\", f\"{metrics['critical_competing_mean']:.1%}\"],\n",
+    "]\n",
+    "\n",
+    "stats_data = [\n",
+    "    ['Test', 'p-value', 'Effect'],\n",
+    "    ['t-test', f\"{stat_results['paired_ttest']['pvalue']:.4f}\", \n",
+    "     '***' if stat_results['paired_ttest']['pvalue'] < 0.001 else ('**' if stat_results['paired_ttest']['pvalue'] < 0.01 else ('*' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'ns'))],\n",
+    "    [\"Cohen's d\", f\"{stat_results['cohens_d']:.2f}\", effect_interp],\n",
+    "]\n",
+    "\n",
+    "table1 = ax4.table(cellText=metrics_data, loc='upper center', cellLoc='center',\n",
+    "                   colWidths=[0.3, 0.35, 0.35], bbox=[0, 0.5, 1, 0.5])\n",
+    "table1.auto_set_font_size(False)\n",
+    "table1.set_fontsize(9)\n",
+    "\n",
+    "for j in range(3):\n",
+    "    table1[(0, j)].set_facecolor(colors_current if j == 1 else (colors_competing if j == 2 else '#f5f5f5'))\n",
+    "    table1[(0, j)].set_text_props(fontweight='bold', color='white' if j > 0 else 'black')\n",
+    "for i in range(1, 4):\n",
+    "    for j in range(3):\n",
+    "        table1[(i, j)].set_facecolor('#f9f9f9' if i % 2 == 0 else 'white')\n",
+    "\n",
+    "table2 = ax4.table(cellText=stats_data, loc='lower center', cellLoc='center',\n",
+    "                   colWidths=[0.3, 0.35, 0.35], bbox=[0, 0, 1, 0.45])\n",
+    "table2.auto_set_font_size(False)\n",
+    "table2.set_fontsize(9)\n",
+    "\n",
+    "for j in range(3):\n",
+    "    table2[(0, j)].set_facecolor('#555555')\n",
+    "    table2[(0, j)].set_text_props(fontweight='bold', color='white')\n",
+    "for i in range(1, 3):\n",
+    "    for j in range(3):\n",
+    "        table2[(i, j)].set_facecolor('#f9f9f9' if i % 2 == 0 else 'white')\n",
+    "\n",
+    "ax4.set_title('D. Summary Statistics', fontsize=12, fontweight='bold', loc='left', pad=10)\n",
+    "\n",
+    "# --- Panel E: Improvement per Field (bottom middle-left) ---\n",
+    "ax5 = fig.add_subplot(gs[1, 1:3])\n",
+    "diff_sorted = plot_df.sort_values('difference')\n",
+    "y_diff = np.arange(len(diff_sorted))\n",
+    "diff_colors = [colors_current if d >= 0 else '#e74c3c' for d in diff_sorted['difference']]\n",
+    "\n",
+    "ax5.hlines(y=y_diff, xmin=0, xmax=diff_sorted['difference'], color=diff_colors, linewidth=2)\n",
+    "ax5.scatter(diff_sorted['difference'], y_diff, color=diff_colors, s=50, zorder=3)\n",
+    "ax5.axvline(x=0, color='black', linewidth=1)\n",
+    "\n",
+    "ax5.set_yticks(y_diff)\n",
+    "ax5.set_yticklabels(diff_sorted['field'], fontsize=8)\n",
+    "ax5.set_xlabel('Position-Aware F1 Difference', fontsize=10)\n",
+    "ax5.set_title('E. Improvement per Field', fontsize=12, fontweight='bold', loc='left')\n",
+    "ax5.set_xlim(min(diff_sorted['difference']) - 0.05, max(diff_sorted['difference']) + 0.05)\n",
+    "sns.despine(ax=ax5)\n",
+    "\n",
+    "# --- Panel F: Additional Capabilities (bottom right) ---\n",
+    "ax6 = fig.add_subplot(gs[1, 3])\n",
+    "ax6.axis('off')\n",
+    "\n",
+    "if len(exclusive_df) > 0:\n",
+    "    exc_text = f\"F. ADDITIONAL CAPABILITIES\n",
+    "({CURRENT_MODEL_NAME} only)\n",
+    "\n",
+    "\"\n",
+    "    for _, row in exclusive_df.iterrows():\n",
+    "        acc_str = f\"{row['current_accuracy']:.1%}\" if pd.notna(row['current_accuracy']) else \"N/A\"\n",
+    "        exc_text += f\"\u2022 {row['field']}:\n",
+    "   {acc_str}\n",
+    "\"\n",
+    "    if not np.isnan(metrics.get('exclusive_mean', np.nan)):\n",
+    "        exc_text += f\"\n",
+    "Mean: {metrics['exclusive_mean']:.1%}\"\n",
+    "else:\n",
+    "    exc_text = \"F. ADDITIONAL CAPABILITIES\n",
+    "\n",
+    "None\"\n",
+    "\n",
+    "ax6.text(0.5, 0.5, exc_text, transform=ax6.transAxes, fontsize=10,\n",
+    "         ha='center', va='center',\n",
+    "         bbox=dict(boxstyle='round,pad=0.5', facecolor='#e8f5e9', edgecolor='#2ecc71', linewidth=2))\n",
+    "\n",
+    "plt.savefig(OUTPUT_DIR / 'comparison_dashboard_landscape.png', dpi=300, bbox_inches='tight', \n",
+    "            facecolor='white', edgecolor='none')\n",
+    "print(f\"Saved: {OUTPUT_DIR / 'comparison_dashboard_landscape.png'}\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
