Add comprehensive model comparison dashboard and insert into notebook

--- a/notebooks_v2/model_comparison_reporter_v2.ipynb
+++ b/notebooks_v2/model_comparison_reporter_v2.ipynb
@@ -3071,25 +3071,23 @@
     "        return \"ns\"\n",
     "\n",
     "def compute_model_f1_scores(df, model_name):\n",
-    "    \"\"\"Compute per-document F1 scores from batch results DataFrame.\"\"\"\n",
+    "    \"\"\"Compute per-document F1 scores from batch results DataFrame.\n",
+    "    \n",
+    "    NOTE: Uses overall_accuracy directly as the F1 metric since it represents\n",
+    "    the mean per-field accuracy which is already F1-equivalent. Computing F1\n",
+    "    from fields_matched/fields_extracted is incorrect because fields_matched\n",
+    "    may be a sum of accuracy scores (0-1 per field) not a count of exact matches.\n",
+    "    \"\"\"\n",
     "    if df.empty:\n",
     "        return pd.Series(dtype=float)\n",
     "\n",
-    "    # Calculate F1 from precision and recall per document\n",
-    "    valid_rows = df[df['fields_extracted'] > 0].copy()\n",
-    "\n",
-    "    if len(valid_rows) == 0:\n",
-    "        return pd.Series(dtype=float)\n",
-    "\n",
-    "    valid_rows['precision'] = valid_rows['fields_matched'] / valid_rows['fields_extracted']\n",
-    "    valid_rows['recall'] = valid_rows['fields_matched'] / valid_rows['total_fields']\n",
-    "\n",
-    "    # F1 = 2 * P * R / (P + R), handle division by zero\n",
-    "    valid_rows['f1'] = 2 * (valid_rows['precision'] * valid_rows['recall']) / (\n",
-    "        valid_rows['precision'] + valid_rows['recall'] + 1e-10\n",
-    "    )\n",
-    "\n",
-    "    return valid_rows['f1']\n",
+    "    # Use overall_accuracy as F1 (it's the mean per-field accuracy, already 0-100 scale)\n",
+    "    # Convert from percentage (0-100) to decimal (0-1)\n",
+    "    if 'overall_accuracy' in df.columns:\n",
+    "        return df['overall_accuracy'] / 100.0\n",
+    "    \n",
+    "    # Fallback: return zeros if no accuracy data\n",
+    "    return pd.Series([0.0] * len(df), index=df.index)\n",
     "\n",
     "# ============================================================================\n",
     "# SUMMARY STATISTICS\n",
@@ -3615,7 +3613,8 @@
     "        other = row['Model A'] if row['Model B'] == best_model else row['Model B']\n",
     "        rprint(f\"[green]• vs {other}: +{row['Advantage']:.1%} advantage ({row['Effect Size']} effect, p={row['p-value']:.4f})[/green]\")\n",
     "\n",
-    "rprint(\"\\n[bold blue]✅ Comprehensive analysis complete![/bold blue]\")\n"
+    "rprint(\"\\n[bold blue]✅ Comprehensive analysis complete![/bold blue]\")\n",
+    ""
    ]
   },
   {
