Refactor model comparison notebook and update summary documentation
- Set execution count to null for project root setup cell in model_comparison_reporter_v2.ipynb
- Removed obsolete cleanup bash cell from the notebook
- Updated model comparison table to reflect accurate model names and features
- Enhanced performance summary title for clarity
- Clarified per-field metrics section, emphasizing differences between per-field F1 and document-level accuracy
- Updated F1 score summary to specify per-field calculations
- Added detailed explanation of position-aware and position-agnostic matching in the model comparison summary markdown

--- a/notebooks_v2/model_comparison_reporter_v2.ipynb
+++ b/notebooks_v2/model_comparison_reporter_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "project-root-setup",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
     "import sys\n",
     "from pathlib import Path\n",
     "\n",
-    "def find_project_root(marker_files=('common/__init__.py', 'CLAUDE.md', 'prompts')):\n",
+    "def find_project_root(marker_files=('common/__init__.py', 'prompts')):\n",
     "    \"\"\"Find project root by looking for marker files, searching up from cwd.\"\"\"\n",
     "    current = Path().absolute()\n",
     "    for parent in [current] + list(current.parents):\n",
@@ -46,41 +46,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %%bash\n",
-    "\n",
-    "# # Keep only most recent CSV files for each model pattern\n",
-    "\n",
-    "# cd output/csv 2>/dev/null || { echo \"output/csv directory not found, skipping cleanup\"; exit 0; }\n",
-    "\n",
-    "# for pattern in \"llama_batch_results_*.csv\" \"internvl3_batch_results_*.csv\" \"internvl3_2b_batch_results_*.csv\"; do\n",
-    "#     files=($(ls -t $pattern 2>/dev/null))\n",
-    "    \n",
-    "#     if [ ${#files[@]} -gt 1 ]; then\n",
-    "#         echo \"Pattern: $pattern\"\n",
-    "#         echo \"  Keeping: ${files[0]}\"\n",
-    "#         echo \"  Deleting $((${#files[@]}-1)) older files...\"\n",
-    "        \n",
-    "#         for ((i=1; i<${#files[@]}; i++)); do\n",
-    "#             rm \"${files[$i]}\"\n",
-    "#             echo \"    ✗ Deleted: ${files[$i]}\"\n",
-    "#         done\n",
-    "#     elif [ ${#files[@]} -eq 1 ]; then\n",
-    "#         echo \"Pattern: $pattern - 1 file (kept)\"\n",
-    "#     else\n",
-    "#         echo \"Pattern: $pattern - no files found\"\n",
-    "#     fi\n",
-    "# done\n",
-    "\n",
-    "# cd ../..\n",
-    "# echo \"✅ Cleanup complete\"\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -94,9 +59,9 @@
     "\n",
     "| Model | Notebook | Key Features |\n",
     "|-------|----------|--------------|\n",
-    "| **Llama-3.2-Vision-11B** | `llama_batch_v2.ipynb` | Multi-turn bank extraction, 8-bit quantization |\n",
-    "| **InternVL3-8B** | `ivl3_8b_batch_v2.ipynb` | Multi-turn bank extraction, L40 bfloat16 |\n",
-    "| **InternVL3-2B** | `ivl3_5_8b_batch_v2.ipynb` | Multi-turn bank extraction, H200 bfloat16, Cascade RL |\n",
+    "| **Llama-3.2-Vision-11B** | `llama_batch_v2.ipynb` | Multi-turn bank extraction, bfloat16 |\n",
+    "| **InternVL3.5-8B** | `ivl3_5_8b_batch_v2.ipynb` | Multi-turn bank extraction, bfloat16, Cascade RL |\n",
+    "| **InternVL3-2B** | `ivl3_2b_batch_v2.ipynb` | Multi-turn bank extraction, bfloat16 |\n",
     "\n",
     "## V2 Features:\n",
     "- **Sophisticated bank statement extraction** using UnifiedBankExtractor\n",
@@ -814,7 +779,7 @@
     "            table[(i+1, 0)].set_text_props(color='white', weight='bold')\n",
     "            table[(i+1, 0)].set_alpha(0.7)\n",
     "    \n",
-    "    ax6.set_title('Performance Summary Table', fontsize=14, fontweight='bold', pad=20)\n",
+    "    ax6.set_title('Document-Level Accuracy Summary\\n(from overall_accuracy column)', fontsize=14, fontweight='bold', pad=20)\n",
     "    \n",
     "    # Overall title\n",
     "    fig.suptitle('MODEL PERFORMANCE COMPARISON\\nBusiness Document Information Extraction',\n",
@@ -3596,8 +3561,7 @@
     "        other = row['Model A'] if row['Model B'] == best_model else row['Model B']\n",
     "        rprint(f\"[green]• vs {other}: +{row['Advantage']:.1f}% advantage ({row['Effect Size']} effect, p={row['p-value']:.4f})[/green]\")\n",
     "\n",
-    "rprint(\"\\n[bold blue]✅ Comprehensive analysis complete![/bold blue]\")\n",
-    ""
+    "rprint(\"\\n[bold blue]✅ Comprehensive analysis complete![/bold blue]\")\n"
    ]
   },
   {
@@ -5310,12 +5274,23 @@
    "source": [
     "## 5.6 Per-Field Precision, Recall, and F1 Metrics\n",
     "\n",
-    "**Using sklearn's classification metrics to evaluate per-field extraction performance.**\n",
+    "**Using `calculate_field_accuracy_f1()` to evaluate per-field extraction performance.**\n",
     "\n",
-    "Metrics explained:\n",
-    "- **Precision**: Of all predicted values, what % were correct?\n",
-    "- **Recall**: Of all ground truth values, what % were correctly extracted?\n",
-    "- **F1 Score**: Harmonic mean of precision and recall\n",
+    "### Important: This is Different from Document-Level Accuracy\n",
+    "\n",
+    "| Metric | Source | What It Measures |\n",
+    "|--------|--------|------------------|\n",
+    "| **Per-Field F1** (this section) | `calculate_field_accuracy_f1()` | How well each field TYPE is extracted across ALL documents |\n",
+    "| **Document Accuracy** (Panel F) | `overall_accuracy` column | How complete each DOCUMENT's extraction is |\n",
+    "\n",
+    "**Why they differ:** F1 averages across field types (some easy, some hard). Accuracy averages across documents (some complete, some partial).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Metrics explained:**\n",
+    "- **Precision**: Of all predicted values for this field, what % were correct?\n",
+    "- **Recall**: Of all ground truth values for this field, what % were extracted?\n",
+    "- **F1 Score**: Harmonic mean of precision and recall (per field type)\n",
     "- **Support**: Number of occurrences of each field in ground truth"
    ]
   },
@@ -6357,9 +6332,10 @@
     "display(summary_stats)\n",
     "\n",
     "# Also show a simplified view highlighting F1\n",
-    "rprint(\"\\n[bold yellow]F1 Score Summary (Key Metric):[/bold yellow]\")\n",
+    "rprint(\"\\n[bold yellow]Per-Field F1 Summary (via calculate_field_accuracy_f1):[/bold yellow]\")\n",
     "f1_summary = all_metrics.groupby('model')['f1_score'].agg(['mean', 'median', 'std', 'min', 'max']).round(4)\n",
     "f1_summary.columns = ['Mean F1', 'Median F1', 'Std Dev', 'Min F1', 'Max F1']\n",
+    "rprint('[dim]Note: These F1 scores are computed per-field, NOT from overall_accuracy column[/dim]')\n",
     "display(f1_summary)"
    ]
   },
