--- a/notebooks_v2/model_accuracy_comparison.ipynb
+++ b/notebooks_v2/model_accuracy_comparison.ipynb
@@ -376,7 +376,7 @@
     "    \"\"\"\n",
     "    Align field-level accuracy AND F1 data from both models into a comparison DataFrame.\n",
     "    \n",
-    "    F1 scores are POSITION-AGNOSTIC for both models, enabling fair comparison.\n",
+    "    F1 scores are POSITION-AWARE for both models, enabling fair comparison.\n",
     "    Marks fields as 'is_exclusive' if they are in EXCLUSIVE_FIELDS.\n",
     "    \"\"\"\n",
     "    data = []\n",
@@ -385,7 +385,7 @@
     "        current_accuracy = current_acc.get(field, np.nan)\n",
     "        competing_accuracy = competing_acc.get(field, np.nan)\n",
     "        \n",
-    "        # F1 scores (position-agnostic for fair comparison)\n",
+    "        # F1 scores (Position-Aware for fair comparison)\n",
     "        current_f1_val = current_f1.get(field, np.nan) if current_f1 else np.nan\n",
     "        competing_f1_val = competing_f1.get(field, np.nan) if competing_f1 else np.nan\n",
     "        \n",
@@ -405,7 +405,7 @@
     "            'current_accuracy': current_accuracy,\n",
     "            'competing_accuracy': competing_accuracy,\n",
     "            'difference': current_accuracy - competing_accuracy if not (np.isnan(current_accuracy) or np.isnan(competing_accuracy)) else np.nan,\n",
-    "            # F1 scores (position-agnostic)\n",
+    "            # F1 scores (Position-Aware)\n",
     "            'current_f1': current_f1_val,\n",
     "            'competing_f1': competing_f1_val,\n",
     "            'f1_difference': current_f1_val - competing_f1_val if not (np.isnan(current_f1_val) or np.isnan(competing_f1_val)) else np.nan,\n",
@@ -467,7 +467,7 @@
     "\n",
     "# F1 comparison summary\n",
     "f1_both = (comparable_df['current_f1'].notna() & comparable_df['competing_f1'].notna()).sum()\n",
-    "print(f\"\\nF1 Score data (Position-Agnostic):\")\n",
+    "print(f\"\\nF1 Score data (Position-Aware):\")\n",
     "print(f\"  Fields with both models: {f1_both}\")\n",
     "if f1_both > 0:\n",
     "    mean_f1_diff = comparable_df['f1_difference'].mean()\n",
@@ -503,7 +503,7 @@
       "Field-Level Comparison (Comparable Fields)\n",
       "====================================================================================================\n",
       "\n",
-      "📊 ACCURACY:\n",
+      "\ud83d\udcca ACCURACY:\n",
       "                   field   category current_accuracy competing_accuracy difference  is_critical\n",
       "            BUSINESS_ABN   Identity           100.0%              20.4%     +79.6%         True\n",
       "           SUPPLIER_NAME   Identity           100.0%              58.8%     +41.2%         True\n",
@@ -521,7 +521,7 @@
       "       TRANSACTION_DATES      Dates            96.3%              56.9%     +39.4%        False\n",
       "TRANSACTION_AMOUNTS_PAID  Financial            98.9%              71.9%     +27.0%        False\n",
       "\n",
-      "📈 F1 SCORES (Position-Agnostic):\n",
+      "\ud83d\udcc8 F1 SCORES (Position-Agnostic):\n",
       "                   field current_f1 competing_f1 f1_difference\n",
       "            BUSINESS_ABN     100.0%        20.4%        +79.6%\n",
       "           SUPPLIER_NAME     100.0%        58.8%        +41.2%\n",
@@ -567,13 +567,13 @@
     "\n",
     "# Show accuracy columns\n",
     "acc_cols = ['field', 'category', 'current_accuracy', 'competing_accuracy', 'difference', 'is_critical']\n",
-    "print(\"\\n📊 ACCURACY:\")\n",
+    "print(\"\\n\ud83d\udcca ACCURACY:\")\n",
     "print(display_df[acc_cols].to_string(index=False))\n",
     "\n",
     "# Show F1 columns if available\n",
     "if has_f1:\n",
     "    f1_cols = ['field', 'current_f1', 'competing_f1', 'f1_difference']\n",
-    "    print(\"\\n📈 F1 SCORES (Position-Agnostic):\")\n",
+    "    print(\"\\n\ud83d\udcc8 F1 SCORES (Position-Aware):\")\n",
     "    print(display_df[f1_cols].to_string(index=False))\n",
     "\n",
     "# Display exclusive capabilities separately\n",
@@ -645,7 +645,7 @@
     "        'critical_competing_mean': valid_df[valid_df['is_critical']]['competing_accuracy'].mean(),\n",
     "    }\n",
     "    \n",
-    "    # F1 Score metrics (position-agnostic for fair comparison)\n",
+    "    # F1 Score metrics (Position-Aware for fair comparison)\n",
     "    f1_valid = comparable_only.dropna(subset=['current_f1', 'competing_f1'])\n",
     "    metrics['n_fields_with_f1'] = len(f1_valid)\n",
     "    \n",
@@ -771,7 +771,7 @@
     "\n",
     "# F1 Score comparison (if available)\n",
     "if metrics['n_fields_with_f1'] > 0:\n",
-    "    print(f\"\\n--- F1 SCORE METRICS (Position-Agnostic) ---\")\n",
+    "    print(f\"\\n--- F1 SCORE METRICS (Position-Aware) ---\")\n",
     "    print(f\"\\nFields with F1 comparison: {metrics['n_fields_with_f1']}\")\n",
     "    print(f\"\\n{CURRENT_MODEL_NAME}:\")\n",
     "    print(f\"  Mean F1: {metrics['current_f1_mean']:.1%}\")\n",
@@ -872,12 +872,12 @@
       "Paired t-test:\n",
       "  t-statistic: 5.9033\n",
       "  p-value:     0.0000\n",
-      "  Significant at α=0.05: YES\n",
+      "  Significant at \u03b1=0.05: YES\n",
       "\n",
       "Wilcoxon signed-rank test (non-parametric):\n",
       "  W-statistic: 0.0000\n",
       "  p-value:     0.0001\n",
-      "  Significant at α=0.05: YES\n",
+      "  Significant at \u03b1=0.05: YES\n",
       "\n",
       "Effect Size:\n",
       "  Cohen's d: 2.3360\n",
@@ -900,13 +900,13 @@
     "print(f\"  t-statistic: {stat_results['paired_ttest']['statistic']:.4f}\")\n",
     "print(f\"  p-value:     {stat_results['paired_ttest']['pvalue']:.4f}\")\n",
     "sig_t = \"YES\" if stat_results['paired_ttest']['pvalue'] < 0.05 else \"NO\"\n",
-    "print(f\"  Significant at α=0.05: {sig_t}\")\n",
+    "print(f\"  Significant at \u03b1=0.05: {sig_t}\")\n",
     "\n",
     "print(f\"\\nWilcoxon signed-rank test (non-parametric):\")\n",
     "print(f\"  W-statistic: {stat_results['wilcoxon']['statistic']:.4f}\")\n",
     "print(f\"  p-value:     {stat_results['wilcoxon']['pvalue']:.4f}\")\n",
     "sig_w = \"YES\" if stat_results['wilcoxon']['pvalue'] < 0.05 else \"NO\"\n",
-    "print(f\"  Significant at α=0.05: {sig_w}\")\n",
+    "print(f\"  Significant at \u03b1=0.05: {sig_w}\")\n",
     "\n",
     "print(f\"\\nEffect Size:\")\n",
     "print(f\"  Cohen's d: {stat_results['cohens_d']:.4f}\")\n",
@@ -1293,7 +1293,7 @@
     "    \n",
     "    ax1.set_yticks(y_pos)\n",
     "    ax1.set_yticklabels(f1_sorted['field'], fontsize=9)\n",
-    "    ax1.set_xlabel('F1 Score (Position-Agnostic)', fontsize=11)\n",
+    "    ax1.set_xlabel('F1 Score (Position-Aware)', fontsize=11)\n",
     "    ax1.set_title('F1 Score Comparison by Field', fontsize=12, fontweight='bold')\n",
     "    ax1.legend(loc='lower right')\n",
     "    ax1.set_xlim(0, 1.05)\n",
@@ -1324,7 +1324,7 @@
     "    plt.show()\n",
     "    \n",
     "    # Summary\n",
-    "    print(f\"\\nF1 Score Summary (Position-Agnostic):\")\n",
+    "    print(f\"\\nF1 Score Summary (Position-Aware):\")\n",
     "    print(f\"  Fields compared: {len(f1_plot_df)}\")\n",
     "    print(f\"  {CURRENT_MODEL_NAME} mean F1: {f1_plot_df['current_f1'].mean():.1%}\")\n",
     "    print(f\"  {COMPETING_MODEL_NAME} mean F1: {f1_plot_df['competing_f1'].mean():.1%}\")\n",
@@ -1721,7 +1721,7 @@
     "    exc_text += \"The following fields are unique to our model (not available in competing model):\\n\\n\"\n",
     "    for _, row in exclusive_df.iterrows():\n",
     "        acc_str = f\"{row['current_accuracy']:.1%}\" if pd.notna(row['current_accuracy']) else \"N/A\"\n",
-    "        exc_text += f\"   • {row['field']}: {acc_str} accuracy\\n\"\n",
+    "        exc_text += f\"   \u2022 {row['field']}: {acc_str} accuracy\\n\"\n",
     "    if not np.isnan(metrics.get('exclusive_mean', np.nan)):\n",
     "        exc_text += f\"\\n   Mean accuracy of exclusive capabilities: {metrics['exclusive_mean']:.1%}\"\n",
     "else:\n",
@@ -2024,7 +2024,7 @@
     "# Add F1 metrics if available\n",
     "if metrics['n_fields_with_f1'] > 0:\n",
     "    report += f\"\"\"\n",
-    "### F1 Score Metrics (Position-Agnostic)\n",
+    "### F1 Score Metrics (Position-Aware)\n",
     "\n",
     "| Metric | {CURRENT_MODEL_NAME} | {COMPETING_MODEL_NAME} |\n",
     "|--------|-----------|----------|\n",
@@ -2033,7 +2033,7 @@
     "| Fields {CURRENT_MODEL_NAME} Better | {metrics['f1_fields_current_better']} | - |\n",
     "| Fields {COMPETING_MODEL_NAME} Better | {metrics['f1_fields_competing_better']} | - |\n",
     "\n",
-    "*Note: F1 scores are position-agnostic (set-based matching) for fair comparison between models.*\n",
+    "*Note: F1 scores use position-aware matching where items must match both in value AND position.*\n",
     "\"\"\"\n",
     "\n",
     "report += f\"\"\"\n",
@@ -2053,8 +2053,8 @@
     "\n",
     "## Statistical Significance\n",
     "\n",
-    "- **Paired t-test p-value**: {stat_results['paired_ttest']['pvalue']:.4f} ({'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not significant'} at α=0.05)\n",
-    "- **Wilcoxon test p-value**: {stat_results['wilcoxon']['pvalue']:.4f} ({'Significant' if stat_results['wilcoxon']['pvalue'] < 0.05 else 'Not significant'} at α=0.05)\n",
+    "- **Paired t-test p-value**: {stat_results['paired_ttest']['pvalue']:.4f} ({'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not significant'} at \u03b1=0.05)\n",
+    "- **Wilcoxon test p-value**: {stat_results['wilcoxon']['pvalue']:.4f} ({'Significant' if stat_results['wilcoxon']['pvalue'] < 0.05 else 'Not significant'} at \u03b1=0.05)\n",
     "- **Cohen's d effect size**: {stat_results['cohens_d']:.4f} ({effect_interp})\n",
     "- **95% CI for difference**: [{stat_results['bootstrap_ci_95'][0]:+.1%}, {stat_results['bootstrap_ci_95'][1]:+.1%}]\n",
     "\n",
@@ -2076,7 +2076,7 @@
     "f1_data = comparable_df.dropna(subset=['current_f1', 'competing_f1'])\n",
     "if len(f1_data) > 0:\n",
     "    report += f\"\"\"\n",
-    "### F1 Scores (Position-Agnostic)\n",
+    "### F1 Scores (Position-Aware)\n",
     "| Field | {CURRENT_MODEL_NAME} F1 | {COMPETING_MODEL_NAME} F1 | Difference |\n",
     "|-------|-----------|----------|------------|\n",
     "\"\"\"\n",
@@ -2190,15 +2190,15 @@
     "\n",
     "**Position-by-position comparison:**\n",
     "- Position i: extracted[i] vs ground_truth[i]\n",
-    "- Match at same position → TP (True Positive)\n",
-    "- Mismatch at same position → FN (False Negative) \n",
-    "- Extra extracted items → FP (False Positive)\n",
-    "- Missing ground truth items → FN (False Negative)\n",
+    "- Match at same position \u2192 TP (True Positive)\n",
+    "- Mismatch at same position \u2192 FN (False Negative) \n",
+    "- Extra extracted items \u2192 FP (False Positive)\n",
+    "- Missing ground truth items \u2192 FN (False Negative)\n",
     "\n",
     "**Metrics:**\n",
     "- Precision = TP / (TP + FP)\n",
     "- Recall = TP / (TP + FN)  \n",
-    "- F1 = 2 × (Precision × Recall) / (Precision + Recall)\n",
+    "- F1 = 2 \u00d7 (Precision \u00d7 Recall) / (Precision + Recall)\n",
     "\n",
     "**List field matching by type:**\n",
     "- **Monetary lists** (LINE_ITEM_PRICES): Numeric comparison with 1% tolerance\n",
