Refactor F1 Score Computation to Use CONFIG Display Names
- Updated model mean F1 computation to utilize display names from CONFIG for consistency with the dashboard.
- Added error handling to ensure models are found in the model_mean_f1 dictionary, improving robustness.
- Cleaned up code for better readability and maintainability.

--- a/notebooks_v2/LMMPOC_comparison.ipynb
+++ b/notebooks_v2/LMMPOC_comparison.ipynb
@@ -728,17 +728,21 @@
     "\n",
     "model_mean_f1 = {}\n",
     "\n",
+    "# Use CONFIG display names as keys so they match the dashboard\n",
     "if not llama_df.empty and not ground_truth.empty:\n",
-    "    model_mean_f1['Llama-11B'] = compute_model_mean_f1(llama_df, ground_truth, 'Llama-11B')\n",
-    "    rprint(f\"  Llama-11B Mean F1: {model_mean_f1['Llama-11B']:.1%}\")\n",
+    "    llama_name = CONFIG['models']['llama']['display_name']\n",
+    "    model_mean_f1[llama_name] = compute_model_mean_f1(llama_df, ground_truth, llama_name)\n",
+    "    rprint(f\"  {llama_name} Mean F1: {model_mean_f1[llama_name]:.1%}\")\n",
     "\n",
     "if not internvl3_8b_df.empty and not ground_truth.empty:\n",
-    "    model_mean_f1['IVL3-8B'] = compute_model_mean_f1(internvl3_8b_df, ground_truth, 'IVL3-8B')\n",
-    "    rprint(f\"  IVL3-8B Mean F1: {model_mean_f1['IVL3-8B']:.1%}\")\n",
+    "    ivl8b_name = CONFIG['models']['internvl3_8b']['display_name']\n",
+    "    model_mean_f1[ivl8b_name] = compute_model_mean_f1(internvl3_8b_df, ground_truth, ivl8b_name)\n",
+    "    rprint(f\"  {ivl8b_name} Mean F1: {model_mean_f1[ivl8b_name]:.1%}\")\n",
     "\n",
     "if not internvl3_2b_df.empty and not ground_truth.empty:\n",
-    "    model_mean_f1['IVL3-2B'] = compute_model_mean_f1(internvl3_2b_df, ground_truth, 'IVL3-2B')\n",
-    "    rprint(f\"  IVL3-2B Mean F1: {model_mean_f1['IVL3-2B']:.1%}\")\n",
+    "    ivl2b_name = CONFIG['models']['internvl3_2b']['display_name']\n",
+    "    model_mean_f1[ivl2b_name] = compute_model_mean_f1(internvl3_2b_df, ground_truth, ivl2b_name)\n",
+    "    rprint(f\"  {ivl2b_name} Mean F1: {model_mean_f1[ivl2b_name]:.1%}\")\n",
     "\n",
     "# Add mean_f1 column to combined_df for dashboard use\n",
     "if not combined_df.empty and model_mean_f1:\n",
@@ -755,7 +759,8 @@
     "                combined_df.loc[mask, 'mean_f1_scaled'] = combined_df.loc[mask, 'overall_accuracy'] / 100.0 * scale\n",
     "    rprint(f\"\\n[green]\u2705 Added mean_f1 column to combined_df[/green]\")\n",
     "\n",
-    "rprint(\"\\n[bold green]\u2705 F1 computation complete - dashboards will use Mean F1[/bold green]\")\n"
+    "rprint(\"\\n[bold green]\u2705 F1 computation complete - dashboards will use Mean F1[/bold green]\")\n",
+    ""
    ]
   },
   {
@@ -988,9 +993,16 @@
     "    summary_data = []\n",
     "    for model in models:\n",
     "        model_data = df_plot[df_plot['model'] == model]\n",
-    "        summary_data.append([\n",
+    "        # Get Mean F1 from model_mean_f1 dictionary (computed in cell 7)\n",
+    "            # FAIL FAST: No silent fallbacks - if model not found, raise error\n",
+    "            if model not in model_mean_f1:\n",
+    "                raise KeyError(f\"\u274c FATAL: Model '{model}' not found in model_mean_f1 dict. \"\n",
+    "                              f\"Available keys: {list(model_mean_f1.keys())}. \"\n",
+    "                              f\"Check that CONFIG display names match.\")\n",
+    "            mean_f1_val = model_mean_f1[model] * 100\n",
+    "            summary_data.append([\n",
     "            model,\n",
-    "            f\"{model_mean_f1.get(model, 0)*100:.1f}%\" if model in model_mean_f1 else f\"{model_data['overall_accuracy'].mean():.1f}%\",\n",
+    "            f\"{mean_f1_val:.1f}%\",\n",
     "            f\"{model_data['processing_time'].mean():.1f}s\",\n",
     "            f\"{(60 / model_data['processing_time'].mean()):.1f}\",\n",
     "            f\"{model_data['overall_accuracy'].std():.1f}%\"\n",
