Refactor accuracy calculations to use F1 score in LMMPOC comparison notebook
- Updated import statement to use calculate_field_accuracy_f1 instead of calculate_field_accuracy.
- Changed variable names and calculations from accuracy to f1_score throughout the notebook.
- Adjusted print statements and visualizations to reflect F1 score instead of accuracy.
- Updated report generation to include F1 analysis and insights.

--- a/notebooks_v2/LMMPOC_comparison.ipynb
+++ b/notebooks_v2/LMMPOC_comparison.ipynb
@@ -1643,7 +1643,7 @@
     "    import sys\n",
     "    sys.path.insert(0, str(PROJECT_ROOT))  # Use PROJECT_ROOT from cell 0\n",
     "    \n",
-    "    from common.evaluation_metrics import load_ground_truth, calculate_field_accuracy\n",
+    "    from common.evaluation_metrics import load_ground_truth, calculate_field_accuracy_f1\n",
     "    \n",
     "    file_path = Path(output_dir) / filename\n",
     "    \n",
@@ -1746,10 +1746,11 @@
     "                if str(extracted_value).upper() == 'NOT_FOUND' and str(ground_truth_value).upper() == 'NOT_FOUND':\n",
     "                    continue\n",
     "                \n",
-    "                # Calculate accuracy score using the same logic as batch notebooks\n",
-    "                accuracy_score = calculate_field_accuracy(\n",
+    "                # Calculate F1 score (position-aware) - same as comprehensive dashboard\n",
+    "                f1_result = calculate_field_accuracy_f1(\n",
     "                    extracted_value, ground_truth_value, field_name, debug=False\n",
     "                )\n",
+    "                accuracy_score = f1_result['f1_score']\n",
     "                \n",
     "                # Initialize field tracking if needed\n",
     "                if field_name not in field_accuracies:\n",
@@ -1771,15 +1772,15 @@
     "            field_data.append({\n",
     "                'model': model_name,\n",
     "                'field_name': field_name,\n",
-    "                'accuracy': accuracy,\n",
+    "                'f1_score': accuracy,\n",
     "                'correct_count': data['correct'],\n",
     "                'total_count': data['total']\n",
     "            })\n",
     "        \n",
     "        # Calculate average accuracy\n",
-    "        avg_accuracy = sum(d['accuracy'] for d in field_data) / len(field_data) if field_data else 0.0\n",
+    "        avg_f1 = sum(d['f1_score'] for d in field_data) / len(field_data) if field_data else 0.0\n",
     "        \n",
-    "        rprint(f\"[green]  \u2705 Computed accuracy for {len(field_data)} fields (avg: {avg_accuracy:.1%})[/green]\")\n",
+    "        rprint(f\"[green]  \u2705 Computed accuracy for {len(field_data)} fields (avg: {avg_f1:.1%})[/green]\")\n",
     "        return pd.DataFrame(field_data)\n",
     "        \n",
     "    except Exception as e:\n",
@@ -2343,23 +2344,23 @@
     "    field_comparison = field_df.pivot_table(\n",
     "        index='field_name',\n",
     "        columns='model',\n",
-    "        values='accuracy',\n",
+    "        values='f1_score',\n",
     "        aggfunc='mean'\n",
     "    )\n",
     "    \n",
     "    # Calculate average accuracy across all models\n",
-    "    field_comparison['avg_accuracy'] = field_comparison.mean(axis=1)\n",
+    "    field_comparison['avg_f1'] = field_comparison.mean(axis=1)\n",
     "    \n",
     "    # Calculate variance to identify fields with inconsistent performance\n",
     "    field_comparison['variance'] = field_comparison.std(axis=1)\n",
     "    \n",
     "    # Identify best model for each field\n",
-    "    model_cols = [col for col in field_comparison.columns if col not in ['avg_accuracy', 'variance']]\n",
+    "    model_cols = [col for col in field_comparison.columns if col not in ['avg_f1', 'variance']]\n",
     "    field_comparison['best_model'] = field_comparison[model_cols].idxmax(axis=1)\n",
     "    field_comparison['best_score'] = field_comparison[model_cols].max(axis=1)\n",
     "    \n",
     "    # Sort by average accuracy\n",
-    "    field_comparison = field_comparison.sort_values('avg_accuracy', ascending=False)\n",
+    "    field_comparison = field_comparison.sort_values('avg_f1', ascending=False)\n",
     "    \n",
     "    return field_comparison\n",
     "\n",
@@ -2367,19 +2368,19 @@
     "if not field_level_df.empty:\n",
     "    field_performance = analyze_field_performance(field_level_df)\n",
     "    \n",
-    "    rprint(\"\\n[bold green]\ud83d\udcca V2 FIELD-LEVEL ACCURACY ANALYSIS[/bold green]\")\n",
+    "    rprint(\"\\n[bold green]\ud83d\udcca V2 FIELD-LEVEL F1 ANALYSIS[/bold green]\")\n",
     "    rprint(\"[cyan]Using sophisticated multi-turn bank statement extraction[/cyan]\")\n",
     "    \n",
     "    # Show top performing fields with color gradient\n",
-    "    rprint(\"[bold blue]\ud83d\udcca All Fields Ranked by Accuracy:[/bold blue]\")\n",
+    "    rprint(\"[bold blue]\ud83d\udcca All Fields Ranked by F1:[/bold blue]\")\n",
     "    \n",
     "    # Get model columns for styling\n",
-    "    model_cols = [col for col in field_performance.columns if col not in [\"avg_accuracy\", \"variance\", \"best_model\", \"best_score\"]]\n",
+    "    model_cols = [col for col in field_performance.columns if col not in [\"avg_f1\", \"variance\", \"best_model\", \"best_score\"]]\n",
     "    \n",
-    "    # Apply color gradient styling to all fields (already sorted by avg_accuracy descending)\n",
+    "    # Apply color gradient styling to all fields (already sorted by avg_f1 descending)\n",
     "    styled_all = field_performance.style.background_gradient(\n",
     "        cmap=\"RdYlGn\",\n",
-    "        subset=model_cols + [\"avg_accuracy\"],\n",
+    "        subset=model_cols + [\"avg_f1\"],\n",
     "        vmin=0,\n",
     "        vmax=1\n",
     "    ).format(\n",
@@ -2416,7 +2417,7 @@
     "    \n",
     "    # Field performance summary\n",
     "    rprint(f\"[cyan]\ud83d\udcc8 Total evaluation fields: {len(field_performance)}[/cyan]\")\n",
-    "    rprint(f\"[cyan]\ud83d\udcca Average accuracy range: {field_performance['avg_accuracy'].min():.1%} - {field_performance['avg_accuracy'].max():.1%}[/cyan]\")\n",
+    "    rprint(f\"[cyan]\ud83d\udcca Average accuracy range: {field_performance['avg_f1'].min():.1%} - {field_performance['avg_f1'].max():.1%}[/cyan]\")\n",
     "    \n",
     "    rprint(\"\\n[bold blue]\ud83c\udfaf Model Field Specialization:[/bold blue]\")\n",
     "    specialization = field_performance['best_model'].value_counts()\n",
@@ -2428,7 +2429,7 @@
     "    rprint(\"\\n[bold blue]\ud83d\udcca Overall Field Accuracy Summary:[/bold blue]\")\n",
     "    for model in field_level_df['model'].unique():\n",
     "        model_data = field_level_df[field_level_df['model'] == model]\n",
-    "        avg_acc = model_data['accuracy'].mean()\n",
+    "        avg_acc = model_data['f1_score'].mean()\n",
     "        rprint(f\"  \u2022 {model}: {avg_acc:.1%} average field accuracy\")\n",
     "else:\n",
     "    rprint(\"[red]\u274c Cannot analyze field performance - no field-level data available[/red]\")"
@@ -3827,8 +3828,8 @@
     "    ax1.set_yticks(y_pos)\n",
     "    ax1.set_yticklabels(all_eval_fields.index, fontsize=11)\n",
     "    ax1.invert_yaxis()  # Match heatmap ordering (top-to-bottom)\n",
-    "    ax1.set_xlabel('Field Accuracy', fontsize=13, fontweight='bold')\n",
-    "    ax1.set_title('All Evaluation Fields: Accuracy by Model (Multi-Turn Bank Extraction)', fontsize=16, fontweight='bold', pad=15)\n",
+    "    ax1.set_xlabel('Field F1', fontsize=13, fontweight='bold')\n",
+    "    ax1.set_title('All Evaluation Fields: F1 by Model (Multi-Turn Bank Extraction)', fontsize=16, fontweight='bold', pad=15)\n",
     "    \n",
     "    # Improved legend placement - outside plot area to avoid occlusion\n",
     "    ax1.legend(loc='upper left', bbox_to_anchor=(1.01, 1), fontsize=11, framealpha=0.98, edgecolor='gray', shadow=True)\n",
@@ -3840,7 +3841,7 @@
     "    for x in [0.25, 0.5, 0.75, 1.0]:\n",
     "        ax1.axvline(x=x, color='gray', linestyle=':', alpha=0.3, linewidth=0.8)\n",
     "    \n",
-    "    # 2. Field Accuracy Heatmap - IMPROVED\n",
+    "    # 2. Field F1 Heatmap - IMPROVED\n",
     "    ax2 = fig.add_subplot(gs[1, 0])\n",
     "    \n",
     "    # Get all evaluation fields for heatmap (same as bar chart for consistency)\n",
@@ -3864,7 +3865,7 @@
     "    \n",
     "    # Improved colorbar\n",
     "    cbar = plt.colorbar(im, ax=ax2, fraction=0.046, pad=0.04)\n",
-    "    cbar.set_label('Field Accuracy', rotation=270, labelpad=20, fontsize=11, fontweight='bold')\n",
+    "    cbar.set_label('Field F1', rotation=270, labelpad=20, fontsize=11, fontweight='bold')\n",
     "    cbar.ax.tick_params(labelsize=10)\n",
     "    \n",
     "    # Add text annotations with better visibility\n",
@@ -3876,7 +3877,7 @@
     "                ax2.text(j, i, f'{value:.0%}', ha='center', va='center', \n",
     "                        color=text_color, fontsize=9, fontweight='bold')\n",
     "    \n",
-    "    ax2.set_title('Field Accuracy Heatmap: All Evaluation Fields', fontsize=15, fontweight='bold', pad=12)\n",
+    "    ax2.set_title('Field F1 Heatmap: All Evaluation Fields', fontsize=15, fontweight='bold', pad=12)\n",
     "    \n",
     "    # 3. Model Specialization Pie Chart - IMPROVED\n",
     "    ax3 = fig.add_subplot(gs[1, 1])\n",
@@ -3913,7 +3914,7 @@
     "                 fontsize=14, fontweight='bold', pad=12)\n",
     "    \n",
     "    # V2: Overall title updated\n",
-    "    fig.suptitle('Field-Level Accuracy Analysis\\nComparison Across Models (Multi-Turn Bank Statement Extraction)', \n",
+    "    fig.suptitle('Field-Level F1 Analysis\\nComparison Across Models (Multi-Turn Bank Statement Extraction)', \n",
     "                fontsize=19, fontweight='bold')\n",
     "    \n",
     "    # Save the visualization\n",
@@ -7558,7 +7559,7 @@
     "- Accuracy by field\n",
     "\n",
     "\n",
-    "### 5. Field-Level Accuracy Analysis\n",
+    "### 5. Field-Level F1 Analysis\n",
     "![Field-Level Accuracy](output/visualizations/field_level_accuracy.png)\n",
     "\n",
     "**3-panel comprehensive view:**\n",
@@ -7608,7 +7609,7 @@
     "    # Add per-field performance if available\n",
     "    if field_performance_df is not None and not field_performance_df.empty:\n",
     "        try:\n",
-    "            report += \"### Field-Level Accuracy by Model\\n\\n\"\n",
+    "            report += \"### Field-Level F1 by Model\\n\\n\"\n",
     "            report += \"| Field | Llama-11B | InternVL3-8B | InternVL3-2B | Best Model | Best Score |\\n\"\n",
     "            report += \"|-------|-----------|--------------|--------------|------------|------------|\\n\"\n",
     "\n",
@@ -7836,15 +7837,15 @@
     "                        field_insights += f\"- **{field_name}**: Use {best_model} ({best_score*100:.0f}% vs {worst_score*100:.0f}%, +{advantage*100:.0f}% advantage)\\n\"\n",
     "            \n",
     "            # Calculate average accuracy per field\n",
-    "            field_perf_copy['avg_accuracy'] = field_perf_copy[model_cols].mean(axis=1)\n",
+    "            field_perf_copy['avg_f1'] = field_perf_copy[model_cols].mean(axis=1)\n",
     "            \n",
     "            # Problematic fields (<50% avg accuracy)\n",
-    "            problematic = field_perf_copy[field_perf_copy['avg_accuracy'] < 0.5]\n",
+    "            problematic = field_perf_copy[field_perf_copy['avg_f1'] < 0.5]\n",
     "            \n",
     "            if not problematic.empty:\n",
     "                field_insights += \"\\n**\u26a0\ufe0f Problematic Fields Requiring Attention (<50% avg accuracy):**\\n\\n\"\n",
     "                for field_name in problematic.head(5).index:\n",
-    "                    avg_acc = field_perf_copy.loc[field_name, 'avg_accuracy']\n",
+    "                    avg_acc = field_perf_copy.loc[field_name, 'avg_f1']\n",
     "                    field_insights += f\"- **{field_name}**: {avg_acc*100:.0f}% average accuracy - Consider prompt optimization or additional fine tuning\\n\"\n",
     "        \n",
     "        report += field_insights\n",
@@ -7920,7 +7921,8 @@
     "except Exception as e:\n",
     "    rprint(f\"[bold red]\u274c Report generation failed: {e}[/bold red]\")\n",
     "    import traceback\n",
-    "    traceback.print_exc()\n"
+    "    traceback.print_exc()\n",
+    ""
    ]
   }
  ],
