Enhance value extraction in LMMPOC comparison to handle NaN/None properly
- Updated the value extraction logic for fields to ensure proper handling of NaN, None, and empty strings.
- Utilized pandas to maintain consistency with DataFrame operations.
- Ensured that 'NOT_FOUND' is returned only when applicable, improving the robustness of the comparison process.

--- a/notebooks_v2/LMMPOC_comparison.ipynb
+++ b/notebooks_v2/LMMPOC_comparison.ipynb
@@ -1739,8 +1739,14 @@
     "            \n",
     "            # Compare each field\n",
     "            for field_name in field_columns:\n",
-    "                extracted_value = row.get(field_name, 'NOT_FOUND')\n",
-    "                ground_truth_value = gt_data.get(field_name, 'NOT_FOUND')\n",
+    "                # Get values with proper NaN/None handling (same as DataFrame version)\n",
+    "                import pandas as pd\n",
+    "                raw_extracted = row.get(field_name)\n",
+    "                raw_gt = gt_data.get(field_name)\n",
+    "                \n",
+    "                # Convert to string and handle NaN/None/empty - same as compute_per_field_metrics\n",
+    "                extracted_value = str(raw_extracted) if pd.notna(raw_extracted) and raw_extracted != '' else 'NOT_FOUND'\n",
+    "                ground_truth_value = str(raw_gt) if pd.notna(raw_gt) and raw_gt != '' else 'NOT_FOUND'\n",
     "                \n",
     "                # Skip if both are NOT_FOUND (field not applicable)\n",
     "                if str(extracted_value).upper() == 'NOT_FOUND' and str(ground_truth_value).upper() == 'NOT_FOUND':\n",
