--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -503,7 +503,7 @@
       "Field-Level Comparison (Comparable Fields)\n",
       "====================================================================================================\n",
       "\n",
-      "📊 F1 SCORES:\n",
+      "\ud83d\udcca F1 SCORES:\n",
       "                   field   category current_accuracy competing_accuracy difference  is_critical\n",
       "            BUSINESS_ABN   Identity           100.0%              20.4%     +79.6%         True\n",
       "           SUPPLIER_NAME   Identity           100.0%              58.8%     +41.2%         True\n",
@@ -522,7 +522,7 @@
       "       TRANSACTION_DATES      Dates            96.3%              56.9%     +39.4%        False\n",
       "TRANSACTION_AMOUNTS_PAID  Financial            98.9%              71.9%     +27.0%        False\n",
       "\n",
-      "📈 F1 SCORES (Position-Aware):\n",
+      "\ud83d\udcc8 F1 SCORES (Position-Aware):\n",
       "                   field current_f1 competing_f1 f1_difference\n",
       "            BUSINESS_ABN     100.0%        20.4%        +79.6%\n",
       "           SUPPLIER_NAME     100.0%        58.8%        +41.2%\n",
@@ -568,13 +568,13 @@
     "\n",
     "# Show accuracy columns\n",
     "acc_cols = ['field', 'category', 'current_accuracy', 'competing_accuracy', 'difference', 'is_critical']\n",
-    "print(\"\\n📊 F1 SCORES:\")\n",
+    "print(\"\\n\ud83d\udcca F1 SCORES:\")\n",
     "print(display_df[acc_cols].to_string(index=False))\n",
     "\n",
     "# Show F1 columns if available\n",
     "if has_f1:\n",
     "    f1_cols = ['field', 'current_f1', 'competing_f1', 'f1_difference']\n",
-    "    print(\"\\n📈 F1 SCORES (Position-Aware):\")\n",
+    "    print(\"\\n\ud83d\udcc8 F1 SCORES (Position-Aware):\")\n",
     "    print(display_df[f1_cols].to_string(index=False))\n",
     "\n",
     "# Display exclusive capabilities separately\n",
@@ -873,12 +873,12 @@
       "Paired t-test:\n",
       "  t-statistic: 5.9033\n",
       "  p-value:     0.0000\n",
-      "  Significant at α=0.05: YES\n",
+      "  Significant at \u03b1=0.05: YES\n",
       "\n",
       "Wilcoxon signed-rank test (non-parametric):\n",
       "  W-statistic: 0.0000\n",
       "  p-value:     0.0001\n",
-      "  Significant at α=0.05: YES\n",
+      "  Significant at \u03b1=0.05: YES\n",
       "\n",
       "Effect Size:\n",
       "  Cohen's d: 2.3360\n",
@@ -901,13 +901,13 @@
     "print(f\"  t-statistic: {stat_results['paired_ttest']['statistic']:.4f}\")\n",
     "print(f\"  p-value:     {stat_results['paired_ttest']['pvalue']:.4f}\")\n",
     "sig_t = \"YES\" if stat_results['paired_ttest']['pvalue'] < 0.05 else \"NO\"\n",
-    "print(f\"  Significant at α=0.05: {sig_t}\")\n",
+    "print(f\"  Significant at \u03b1=0.05: {sig_t}\")\n",
     "\n",
     "print(f\"\\nWilcoxon signed-rank test (non-parametric):\")\n",
     "print(f\"  W-statistic: {stat_results['wilcoxon']['statistic']:.4f}\")\n",
     "print(f\"  p-value:     {stat_results['wilcoxon']['pvalue']:.4f}\")\n",
     "sig_w = \"YES\" if stat_results['wilcoxon']['pvalue'] < 0.05 else \"NO\"\n",
-    "print(f\"  Significant at α=0.05: {sig_w}\")\n",
+    "print(f\"  Significant at \u03b1=0.05: {sig_w}\")\n",
     "\n",
     "print(f\"\\nEffect Size:\")\n",
     "print(f\"  Cohen's d: {stat_results['cohens_d']:.4f}\")\n",
@@ -1525,7 +1525,7 @@
     "fig = plt.figure(figsize=(7.5, 13), facecolor='white')\n",
     "\n",
     "# Create grid: 4 rows with different heights\n",
-    "gs = fig.add_gridspec(4, 2, height_ratios=[1.2, 1, 1, 0.5], hspace=0.5, wspace=0.4, top=0.87, bottom=0.04)\n",
+    "gs = fig.add_gridspec(5, 2, height_ratios=[1.2, 1, 1, 0.5, 0.6], hspace=0.5, wspace=0.4, top=0.87, bottom=0.04)\n",
     "\n",
     "# --- Title & Summary Stats (top spanning both columns) ---\n",
     "ax_title = fig.add_axes([0.05, 0.93, 0.9, 0.05])\n",
@@ -1722,7 +1722,7 @@
     "    exc_text += \"The following fields are unique to our model (not available in competing model):\\n\\n\"\n",
     "    for _, row in exclusive_df.iterrows():\n",
     "        acc_str = f\"{row['current_accuracy']:.1%}\" if pd.notna(row['current_accuracy']) else \"N/A\"\n",
-    "        exc_text += f\"   • {row['field']}: {acc_str} accuracy\\n\"\n",
+    "        exc_text += f\"   \u2022 {row['field']}: {acc_str} accuracy\\n\"\n",
     "    if not np.isnan(metrics.get('exclusive_mean', np.nan)):\n",
     "        exc_text += f\"\\n   Mean F1 of exclusive capabilities: {metrics['exclusive_mean']:.1%}\"\n",
     "else:\n",
@@ -1732,6 +1732,30 @@
     "ax6.text(0.5, 0.5, exc_text, transform=ax6.transAxes, fontsize=9,\n",
     "         ha='center', va='center',\n",
     "         bbox=dict(boxstyle='round,pad=0.5', facecolor='#e8f5e9', edgecolor='#2ecc71', linewidth=2))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# --- Panel G: Throughput Comparison ---\n",
+    "ax7 = fig.add_subplot(gs[4, :])\n",
+    "\n",
+    "# Throughput data\n",
+    "throughput_models = ['InternVL3.5-8B', 'LayoutLM']\n",
+    "throughput_values = [1.6, 3.52]\n",
+    "throughput_colors = ['#2ecc71', '#3498db']\n",
+    "\n",
+    "bars = ax7.barh(throughput_models, throughput_values, color=throughput_colors, height=0.5, edgecolor='black', linewidth=1.2)\n",
+    "\n",
+    "# Add value labels\n",
+    "for bar, val in zip(bars, throughput_values):\n",
+    "    ax7.text(val + 0.08, bar.get_y() + bar.get_height()/2, \n",
+    "             f'{val:.1f} pages/min', va='center', fontsize=9, fontweight='bold')\n",
+    "\n",
+    "ax7.set_xlabel('Throughput (pages/min)', fontsize=9)\n",
+    "ax7.set_title('G. Processing Throughput Comparison', fontsize=11, fontweight='bold', loc='left')\n",
+    "ax7.set_xlim(0, 5)\n",
+    "ax7.xaxis.grid(True, linestyle='--', alpha=0.7)\n",
+    "ax7.set_axisbelow(True)\n",
+    "sns.despine(ax=ax7)\n",
     "\n",
     "plt.savefig(OUTPUT_DIR / 'comparison_dashboard_a4.png', dpi=300, bbox_inches='tight', \n",
     "            facecolor='white', edgecolor='none')\n",
@@ -2054,8 +2078,8 @@
     "\n",
     "## Statistical Significance\n",
     "\n",
-    "- **Paired t-test p-value**: {stat_results['paired_ttest']['pvalue']:.4f} ({'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not significant'} at α=0.05)\n",
-    "- **Wilcoxon test p-value**: {stat_results['wilcoxon']['pvalue']:.4f} ({'Significant' if stat_results['wilcoxon']['pvalue'] < 0.05 else 'Not significant'} at α=0.05)\n",
+    "- **Paired t-test p-value**: {stat_results['paired_ttest']['pvalue']:.4f} ({'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not significant'} at \u03b1=0.05)\n",
+    "- **Wilcoxon test p-value**: {stat_results['wilcoxon']['pvalue']:.4f} ({'Significant' if stat_results['wilcoxon']['pvalue'] < 0.05 else 'Not significant'} at \u03b1=0.05)\n",
     "- **Cohen's d effect size**: {stat_results['cohens_d']:.4f} ({effect_interp})\n",
     "- **95% CI for difference**: [{stat_results['bootstrap_ci_95'][0]:+.1%}, {stat_results['bootstrap_ci_95'][1]:+.1%}]\n",
     "\n",
@@ -2191,15 +2215,15 @@
     "\n",
     "**Position-by-position comparison:**\n",
     "- Position i: extracted[i] vs ground_truth[i]\n",
-    "- Match at same position → TP (True Positive)\n",
-    "- Mismatch at same position → FN (False Negative) \n",
-    "- Extra extracted items → FP (False Positive)\n",
-    "- Missing ground truth items → FN (False Negative)\n",
+    "- Match at same position \u2192 TP (True Positive)\n",
+    "- Mismatch at same position \u2192 FN (False Negative) \n",
+    "- Extra extracted items \u2192 FP (False Positive)\n",
+    "- Missing ground truth items \u2192 FN (False Negative)\n",
     "\n",
     "**Metrics:**\n",
     "- Precision = TP / (TP + FP)\n",
     "- Recall = TP / (TP + FN)  \n",
-    "- F1 = 2 × (Precision × Recall) / (Precision + Recall)\n",
+    "- F1 = 2 \u00d7 (Precision \u00d7 Recall) / (Precision + Recall)\n",
     "\n",
     "**List field matching by type:**\n",
     "- **Monetary lists** (LINE_ITEM_PRICES): Numeric comparison with 1% tolerance\n",
